--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "moment": "^2.18.1"
   }
 }
