--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -14,7 +14,7 @@ spec:
       serviceAccount: infra-probe
       containers:
       - name: infra-probe
-        image: rdpanek/infra-probe:night-build
+        image: rdpanek/infra-probe:0.1.3
         imagePullPolicy: Always
         env:
         - name: PROBE_NAME
